--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
 		"ava": "3.15.0",
 		"eslint": "7.19.0"
 	},
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org"
+	},
 	"ava": {
 		"files": [
 			"tests/*.test.js"
